objects/URL_Parameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Routing_BG__c</fullName>
        <label>Routing BG</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Country__c</fullName>
        <label>Routing Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Region__c</fullName>
        <label>Routing Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Sub_Region__c</fullName>
        <label>Routing Sub-Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>URL Parameters</label>
</CustomObject>